--- a/app/src/main/res/layout/dialog_connect.xml
+++ b/app/src/main/res/layout/dialog_connect.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -162,3 +167,5 @@
     </LinearLayout>
 
 </LinearLayout>
+
+</ScrollView>
