--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -175,15 +175,15 @@
                 android:background="@drawable/dpad_center" />
         </RelativeLayout>
 
-        <!-- Analog Stick (130° from D-Pad - Lower Left Diagonal) -->
+        <!-- Analog Stick (130° from North - Lower Right of D-Pad) -->
         <FrameLayout
             android:id="@+id/analog_area"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_below="@id/dpad_container"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="-20dp"
+            android:layout_toEndOf="@id/dpad_container"
+            android:layout_marginStart="-40dp"
+            android:layout_marginTop="-30dp"
             android:background="@drawable/analog_background">
 
             <View
