--- a/app/src/main/res/drawable/analog_background.xml
+++ b/app/src/main/res/drawable/analog_background.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
+    <size android:width="90dp" android:height="90dp" />
     <solid android:color="#2d3561" />
     <stroke android:width="3dp" android:color="#404682" />
 </shape>
