--- a/app/src/main/res/drawable/analog_stick.xml
+++ b/app/src/main/res/drawable/analog_stick.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#533483" />
+    <size android:width="40dp" android:height="40dp" />
+    <solid android:color="#6b5b95" />
     <stroke android:width="2dp" android:color="#e94560" />
 </shape>
